--- a/sections/theerastour.html
+++ b/sections/theerastour.html
@@ -41,13 +41,17 @@
             <li><a href="./theerastour.html">the eras tour</a></li>
             <li><a href="./shop.html">shop</a></li>
         </ul>
-        <nav>
-            <h2>The eras tour</h2>
-            <H3>Que tiene de especial el eras tour?</H3>
-            <p>Descrito por la propia Swift como «un viaje a través de las eras musicales de [su] carrera»,​ cada concierto tiene una duración de más de tres horas, consistiendo en 45 canciones interpretadas y segmentadas en diez actos, incluyendo el set acústico</p>
-            <img class="imagenes-tay" src="../resources/foto.jpg" alt="">
-            <br>
-            <br>
+        
+      <main class="main">
+        <h2>The eras tour</h2> 
+        <br><br>
+        <div class="explicacion-eras">
+        
+        <img class="imagenes-tay" src="../resources/foto.jpg" alt="">
+        <H3>Que tiene de especial el eras tour?</H3>
+          <p>Descrito por la propia Swift como «un viaje a través de las eras musicales de [su] carrera»,​ cada concierto tiene una duración de más de tres horas, consistiendo en 45 canciones interpretadas y segmentadas en diez actos, incluyendo el set acústico</p>
+        </div>
+
             <h2>Duracion del eras</h2>
             <p>El The eras Tour es conocido por su increíble duración y sus inolvidables momentos en el escenario. Por lo general, la duración de este tour varía entre 2 a 3 horas de pura emoción y entretenimiento para todos los asistentes.</p>
             <img src="https://media.tenor.com/1idIgs6-d9gAAAAM/taylor-swift-the-eras-tour.gif" alt="">
@@ -57,7 +61,7 @@
             <br><br> <br>
             <h3>PLAYLIST THE ERAS</h3>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0jtIQTn00Bw89vLQ487CpW?utm_source=generator" width="40%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
+      </main>in>
  
 
 
