--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                     Taylor actuó con invitados especiales como John Mayer, Faith Hill y Katy Perry. El setlist estaba
                     compuesto por 19 canciones en total. Además, fue la primera gira en la que Taylor Swift incorporó
                     canciones como "Jump Then Fall" "Today Was a Fairytale" y "I'm Only Me When I'm With You".</p>
-                    <img src="./resources/fearless.jpg"
+                    <img class="imgp" src="./resources/fearless.jpg"
                 
                     alt="">
             
                     <br><br><br>
                 <h2>Red tour</h2>
                 <p class="container text-right">Red Tour fue la tercera gira de la cantante y compositora estadounidense Taylor Swift para promover su cuarto álbum de estudio Red. Comenzó el 13 de marzo de 2013 en Estados Unidos y culminó el 12 de junio de 2014 en Singapur.</p>
-                <img src="./resources/red2.jpg" alt="">
+                <img  class="imgp" src="./resources/red2.jpg" alt="">
                 <br><br><br>
                 <h2>Algunas fotos del tour</h2>
                 <div class="container">
