--- a/sections/theerastour.html
+++ b/sections/theerastour.html
@@ -54,7 +54,7 @@
 
             <h2>Duracion del eras</h2>
             <p>El The eras Tour es conocido por su increíble duración y sus inolvidables momentos en el escenario. Por lo general, la duración de este tour varía entre 2 a 3 horas de pura emoción y entretenimiento para todos los asistentes.</p>
-            <img src="https://media.tenor.com/1idIgs6-d9gAAAAM/taylor-swift-the-eras-tour.gif" alt="">
+            <img class="giff" src="https://media.tenor.com/1idIgs6-d9gAAAAM/taylor-swift-the-eras-tour.gif" alt="">
             <br><br><br><br><br><br>
             <h3>THE ERAS MOVIE</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/7rlT1pAIPaE?si=x43oB255plZbYwUm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
