--- a/sections/dates.html
+++ b/sections/dates.html
@@ -1,92 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!doctype html>
-    <html lang="en">
-      <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bootstrap demo</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      </head>
-      <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      </body>
-    <!-- link css -->
+    <title>The Eras Tour</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="../scss/main.css">
 </head>
-
 <body>
-
-    <nav class="nav">
-        <ul class="links1">
-            <li><a href="../index.html">Taylor</a></li>
-            <li><a href="./dates.html">dates</a></li>
-
-        </ul>
-        <div class="logo">
-            <a href="./theerastour.html">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/The_Eras_Tour_Logo.png/640px-The_Eras_Tour_Logo.png"
-                    alt="logo-taylor-al">
-            </a>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">Taylor</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="./dates.html">Albums</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="./theerastour.html">The Eras Tour</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./shop.html">Tienda</a></li>
+                </ul>
+                <a class="navbar-brand" href="./theerastour.html">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/The_Eras_Tour_Logo.png/640px-The_Eras_Tour_Logo.png"
+                         alt="The Eras Tour Logo" height="30">
+                </a>
+            </div>
         </div>
-        <ul class="link2">
-            <li><a href="./theerastour.html">the eras tour</a></li>
-            <li><a href="./shop.html">shop</a></li>
-        </ul>
+    </nav>
 
-        <nav>
-            <h2>the eras dates</h2>
-            <form action="#" method="get" class="formulario">
-                <input type="text" placeholder="escriba su nombre" name="nombre">
-                <br><br>
-
-                <input type="number" placeholder="Numero telefonico" name="nombre">
-                <br><br>
-
-
-                <input type="date" placeholder="fecha de nacimiento" name="fecha de nacimiento">
-                <br><br>
-
-                <input type="email" placeholder="coloque su mail" name="mail">
-                <br><br><br><br><br>
-
-                <input type="search">
-
-                <input type="week" placeholder="semana de suscripcion" name="sub">
-
-                <!-- tipo radio -->
-                <p>elegui tu era favorita</p>
-                <div>folklore</div>
-                <input type="radio" name="remera" value="folklore">
-                <div>1989</div>
-                <input type="radio" name="remera" value="1989">
-
-                <!-- menu desplegable -->
-                <P>era favorita del tour</P>
-                <select name="talle">
-                    <option value="rep">rep</option>
-                    <option value="1989">1989</option>
-                    <option value="folklore">folklore</option>
-                    <option value="evermore">evermore</option>
-                    <option value="speak now">speak now</option>
-                </select>
-                <br>
-                Queres recibir infomracion sobre las fechas del tour
-                <input type="checkbox" name="">
-                <br>
-                <br>
-                <textarea name="Escribe tu comentario" id="" cols="40" rows="7"></textarea>
-
-                <input type="submit" value="Enviar" name="vamos!!">
-
-
+    <!-- Main Content -->
+    <main class="container my-4">
+        <!-- Form Section -->
+        <section class="mb-4">
+            <h2>albums</h2>
+            <div class="album-container">
+                <iframe src="https://open.spotify.com/embed/album/5eyZZoQEFQWRHkV2xgAeBw?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/4hDok0OAJd57SGIT8xuWJH?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/5AEDGbliTTfjOB8TSm1sxt?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/6kZ42qRrzov54LcAk4onW9?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/1o59UpKw81iHR0HPiSkJR0?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/6DEjYFkNZh67HP7R9PSZvv?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/1NAmidJlEaVgA3MpcPFYGq?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/1pzvBxYgT6OVwJLtHkrdQK?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/6AORtDjduMM3bupSWzbTSG?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/1fnJ7k0bllNfL1kVdNVW1A?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe src="https://open.spotify.com/embed/album/5H7ixXZfsNMGbIE5OBSpcb?utm_source=generator" width="250" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <br><br><br>
+            
+            <!-- Formulario -->
+            <h1>Suscribite asi no te perdes de nada!!</h1>
+            <form action="#" method="get" class="formulario mt-4">
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre">
+                </div>
+                <div class="mb-3">
+                    <label for="telefono" class="form-label">Número telefónico</label>
+                    <input type="tel" class="form-control" id="telefono" name="telefono">
+                </div>
+                <div class="mb-3">
+                    <label for="fecha_nacimiento" class="form-label">Fecha de nacimiento</label>
+                    <input type="date" class="form-control" id="fecha_nacimiento" name="fecha_nacimiento">
+                </div>
+                <div class="mb-3">
+                    <label for="mail" class="form-label">Correo electrónico</label>
+                    <input type="email" class="form-control" id="mail" name="mail">
+                </div>
+                <!-- Otros campos del formulario aquí -->
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
+        </section>
+    </main>
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
-
 </html>
